<resources>
    <string name="app_name">Baking App</string>
    <string name="recipe_list_title">Recipes</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="steps_title">Steps</string>
    <string name="recipe_name">Recipe Name</string>
</resources>
