...
@Preview(showBackground = true)
@Composable
fun RecipeListPreview() {
    val mockRecipes = listOf(
        Recipe(
            id = 1,
            name = "Nutella Pie",
            ingredients = listOf(
                Ingredient(2.0, "CUP", "Graham Cracker crumbs"),
                Ingredient(6.0, "TBLSP", "Butter, melted")
            ),
            steps = listOf(
                Step(0, "Recipe Introduction", "Recipe Introduction", "", "")
...
